--- a/examples/2_edge_detection/index.html
+++ b/examples/2_edge_detection/index.html
@@ -18,7 +18,7 @@
 
   <!-- Import libraries -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
-  <script src="../../dist/p5.asciify.min.js"></script>
+  <script src="../../dist/p5.asciify.umd.js"></script>
   <!-- <script src="../../dist/p5.asciify.min.js"></script> -->
 
 </head>
