--- a/tests/brightness_to_ascii/index.html
+++ b/tests/brightness_to_ascii/index.html
@@ -19,24 +19,8 @@
   <!-- Import libraries -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.js"></script>
 
-<script src="../../src/constants.js"></script>
-<script src="../../src/errors.js"></script>
-<script src="../../src/grid.js"></script>
-<script src="../../src/characterset.js"></script>
-<script src="../../src/colorpalette.js"></script>
-<script src="../../src/utils.js"></script>
-<script src="../../src/managers/effectmanager.js"></script>
-<script src="../../src/effects/effect.js"></script>
-<script src="../../src/effects/kaleidoscope.js"></script>
-<script src="../../src/effects/distortion.js"></script>
-<script src="../../src/effects/grayscale.js"></script>
-<script src="../../src/effects/invert.js"></script>
-<script src="../../src/effects/chromaticaberration.js"></script>
-<script src="../../src/effects/rotate.js"></script>
-<script src="../../src/effects/brightness.js"></script>
-<script src="../../src/effects/colorpalette.js"></script>
-<script src="../../src/asciify.js"></script>
-<script src="../../src/prototypes.js"></script>
+<script src="../../dist/p5.asciify.umd.js"></script>
+  <!-- <script src="../../dist/p5.asciify.min.js"></script> -->
 
 </head>
 
