--- a/tests/brightness_to_ascii/index.html
+++ b/tests/brightness_to_ascii/index.html
@@ -19,7 +19,7 @@
   <!-- Import libraries -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.8.0/lib/p5.js"></script>
 
-<script src="../../dist/p5.asciify.umd.js"></script>
+<script src="../../dist/p5.asciify.umd.min.js"></script>
   <!-- <script src="../../dist/p5.asciify.min.js"></script> -->
 
 </head>
