--- a/tests/effects/index.html
+++ b/tests/effects/index.html
@@ -19,7 +19,7 @@
   <!-- Import libraries -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.js"></script>
 
-  <script src="../../dist/p5.asciify.umd.js"></script>
+  <script src="../../dist/p5.asciify.js"></script>
 
 </head>
 
