--- a/examples/2_edge_detection/index.html
+++ b/examples/2_edge_detection/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify 1_effects</title>
+  <title>p5.asciify 2_edge_detection</title>
 
   <style>
     body {
