--- a/examples/3_instance_mode/index.html
+++ b/examples/3_instance_mode/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify 2_edge_detection</title>
+  <title>p5.asciify 3_instance_mode</title>
 
   <style>
     body {
