--- a/tests/effects/index.html
+++ b/tests/effects/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify 0_basic</title>
+  <title>p5.asciify | effects test</title>
 
   <style>
     body {
