--- a/tests/accurate_conversion/index.html
+++ b/tests/accurate_conversion/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify 0_basic</title>
+  <title>p5.asciify | accurate_conversion test</title>
 
   <style>
     body {
