--- a/tests/asciishift/index.html
+++ b/tests/asciishift/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify | asciishift 3d</title>
+  <title>p5.asciify | asciishift</title>
 
   <style>
     body {
@@ -20,11 +20,7 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.11.1/lib/p5.js"></script>
   <script src="../../dist/p5.asciify.js"></script>
 
-  <script src="seedrandom.min.js"></script>
-  
-   <script src="rectanglemanager.js"></script>
-  <script src="randomManager.js"></script>
-
+  <script src="rectanglemanager.js"></script>
 </head>
 
 <body>
