almost fully implemented vite dev environment now

--- a/tests/asciishift/index.html
+++ b/tests/asciishift/index.html
@@ -18,7 +18,7 @@
 
   <!-- Import libraries -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.11.1/lib/p5.js"></script>
-  <script src="../../dist/p5.asciify.js"></script>
+  <script src="../../dist/p5.asciify.umd.js"></script>
 
   <script src="rectanglemanager.js"></script>
 </head>
