--- a/examples/2_instance_mode/index.html
+++ b/examples/2_instance_mode/index.html
@@ -16,14 +16,10 @@
     }
   </style>
 
-  <!-- Import libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.11.1/lib/p5.js"></script>
-  <script src="../../dist/p5.asciify.umd.js"></script>
-
 </head>
 
 <body>
-  <script src="sketch.js"></script>
+  <script type="module" src="sketch.js"></script>
 </body>
 
 </html>
