--- a/examples/0_basic/index.html
+++ b/examples/0_basic/index.html
@@ -19,7 +19,10 @@
 </head>
 
 <body>
-  <script type="module" src="sketch.js"></script>
+  <script type="module">
+    import { createSketch } from './sketch.js';
+    createSketch();
+  </script>
 </body>
 
 </html>
