Fixed brightness to ascii example

--- a/examples/brightness_to_ascii/index.html
+++ b/examples/brightness_to_ascii/index.html
@@ -18,7 +18,10 @@
 </head>
 
 <body>
-  <script type="module" src="sketch.js"></script>
+  <script type="module">
+    import { createSketch } from './sketch.js';
+    createSketch();
+  </script>
 </body>
 
 </html>
