--- a/examples/index.html
+++ b/examples/index.html
@@ -40,6 +40,7 @@
         <li><a href="4_brightness_to_ascii/index.html">brightness to ascii</a></li>
         <li><a href="5_gradients/index.html">gradients</a></li>
         <li><a href="6_custom/index.html">ASCIISHIFT1 (custom ascii renderer)</a></li>
+        <li><a href="7_multiple_asciifiers/index.html">multiple asciifiers</a></li>
     </ul>
 </body>
 </html>
