--- a/examples/2_accurate_conversion/index.html
+++ b/examples/2_accurate_conversion/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify | accurate_conversion test</title>
+  <title>p5.asciify | 2_accurate_conversion</title>
 
   <style>
     body {
