--- a/examples/3_brightness_to_ascii/index.html
+++ b/examples/3_brightness_to_ascii/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify | gradients test</title>
+  <title>p5.asciify | 3_brightness_to_ascii</title>
 
   <style>
     body {
@@ -18,7 +18,10 @@
 </head>
 
 <body>
-  <script type="module" src="sketch.js"></script>
+  <script type="module">
+    import { createSketch } from './sketch.js';
+    createSketch();
+  </script>
 </body>
 
 </html>
