--- a/examples/4_gradients/index.html
+++ b/examples/4_gradients/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify | brightness_to_ascii test</title>
+  <title>p5.asciify | 4_gradients</title>
 
   <style>
     body {
@@ -18,10 +18,7 @@
 </head>
 
 <body>
-  <script type="module">
-    import { createSketch } from './sketch.js';
-    createSketch();
-  </script>
+  <script type="module" src="sketch.js"></script>
 </body>
 
 </html>
