--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,7 @@
     <ul>
         <li><a href="00_basic/index.html">basic example</a></li>
         <li><a href="01_edge_detection/index.html">edge detection</a></li>
-        <li><a href="02_accurate_conversion/index.html">accurate conversion</a></li>
+        <li><a href="02_plugins/index.html">plugins</a></li>
         <li><a href="03_custom2D/index.html">ASCIISHIFT1 ('custom2D' ascii renderer)</a></li>
         <li><a href="04_multiple_asciifiers/index.html">multiple asciifiers</a></li>
         <li><a href="05_hydra-synth/index.html">hydra-synth + p5.asciify</a></li>
