--- a/examples/04_hydra-synth/index.html
+++ b/examples/04_hydra-synth/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify - 06_hydra-synth</title>
+  <title>p5.asciify | 04_hydra-synth</title>
 
   <style>
     body {
