--- a/examples/05_plugins/index.html
+++ b/examples/05_plugins/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>p5.asciify - 02_plugins</title>
+  <title>p5.asciify | 05_plugins</title>
 
   <style>
     body {
