--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,12 @@
         h1 {
             color: #333;
         }
+        h2 {
+            color: #555;
+            margin-top: 30px;
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 5px;
+        }
         ul {
             list-style-type: none;
             padding: 0;
@@ -29,17 +35,35 @@
         a:hover {
             background-color: #f0f0f0;
         }
+        .version-note {
+            color: #666;
+            font-size: 0.9em;
+            margin-top: 10px;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
     <h1>p5.asciify examples</h1>
+    
+    <h2>Examples for p5.js v1.8.0+ and below 2.0.0</h2>
     <ul>
-        <li><a href="00_basic/index.html">basic example</a></li>
-        <li><a href="01_edge_detection/index.html">edge detection</a></li>
-        <li><a href="02_custom2D/index.html">ASCIISHIFT1 ('custom2D' ascii renderer)</a></li>
-        <li><a href="03_multiple_asciifiers/index.html">multiple asciifiers</a></li>
-        <li><a href="04_hydra-synth/index.html">hydra-synth + p5.asciify</a></li>
-        <li><a href="05_plugins/index.html">plugins</a></li>
+        <li><a href="1.X/00_basic/index.html">basic example</a></li>
+        <li><a href="1.X/01_edge_detection/index.html">edge detection</a></li>
+        <li><a href="1.X/02_custom2D/index.html">ASCIISHIFT1 ('custom2D' ascii renderer)</a></li>
+        <li><a href="1.X/03_multiple_asciifiers/index.html">multiple asciifiers</a></li>
+        <li><a href="1.X/04_hydra-synth/index.html">hydra-synth + p5.asciify</a></li>
+        <li><a href="1.X/05_plugins/index.html">plugins</a></li>
+    </ul>
+    
+    <h2>Examples for p5.js v2.0.2+</h2>
+    <ul>
+        <li><a href="2.X/00_basic/index.html">basic example</a></li>
+        <li><a href="2.X/01_edge_detection/index.html">edge detection</a></li>
+        <li><a href="2.X/02_custom2D/index.html">ASCIISHIFT1 ('custom2D' ascii renderer)</a></li>
+        <li><a href="2.X/03_multiple_asciifiers/index.html">multiple asciifiers</a></li>
+        <li><a href="2.X/04_hydra-synth/index.html">hydra-synth + p5.asciify</a></li>
+        <li><a href="2.X/05_plugins/index.html">plugins</a></li>
     </ul>
 </body>
 </html>
